force-app/main/default/objects/Field_Types__c/Field_Types__c.object-meta.xml
<CustomObject>
    <label>Field Types</label>
    <nameField>
        <label>Field Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>