force-app/main/default/objects/Field_Types__c/fields/Countries_Visited__c.field-meta.xml
<CustomField>
    <fullName>Countries_Visited__c</fullName>
    <label>Countries Visited</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>