force-app/main/default/objects/Field_Types__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <label>Courses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Institute__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Cognos</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>