force-app/main/default/objects/Field_Types__c/fields/Encrypted_Field__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Field__c</fullName>
    <label>Encrypted Field</label>
    <length>18</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>