force-app/main/default/objects/Field_Types__c/fields/Institute__c.field-meta.xml
<CustomField>
    <fullName>Institute__c</fullName>
    <label>Institute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edureka</fullName>
            </value>
            <value>
                <fullName>Udamy</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Local Institute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>