force-app/main/default/objects/Field_Types__c/fields/New_Currency__c.field-meta.xml
<CustomField>
    <fullName>New_Currency__c</fullName>
    <label>New Currency</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>