force-app/main/default/objects/Field_Types__c/fields/Student_Master__c.field-meta.xml
<CustomField>
    <fullName>Student_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Master</label>
    <referenceTo>Student_Master__c</referenceTo>
    <relationshipLabel>Field Types</relationshipLabel>
    <relationshipName>Field_Types</relationshipName>
    <type>Lookup</type>
</CustomField>