force-app/main/default/objects/Field_Types__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_Box__c</columns>
    <columns>Institute__c</columns>
    <columns>Courses__c</columns>
    <columns>Rich_Text_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>